[package]
name = "ddh-remover"
version = "0.1.0"
authors = ["Pierguido Lambri <plambri@redhat.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4"
env_logger = "0.7"
num-traits = "0.2"
num-derive = "0.2"
fs_extra = "1.2.0"
